# Sciskill

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: CONTRIBUTING.md
examples/: sample_broken.bib  standalone_usage.py  use_with_claude.py  use_with_langchain.py
sciskills/: __init__.py  cli.py
sciskills/core/: __init__.py  base.py  registry.py
sciskills/core/adapters/: __init__.py  claude_adapter.py  langchain_adapter.py
sciskills/skills/: __init__.py
sciskills/skills/bibtex_fixer/: __init__.py  rules.py  skill.py
sciskills/skills/experiment_comparator/: __init__.py  skill.py
sciskills/skills/gap_identifier/: __init__.py  skill.py
sciskills/skills/paper_extractor/: __init__.py  skill.py
sciskills/skills/reproducibility_checker/: __init__.py  checks.py  skill.py
sciskills/skills/statistical_advisor/: __init__.py  decision_tree.py  skill.py
sciskills/utils/: __init__.py  api_clients.py  latex_templates.py  llm_client.py  pdf_parser.py
skills/bibtex-fixer-enricher/: SKILL.md  run.py
skills/bibtex-fixer-enricher/docs/: issue-types.md
skills/experiment-result-comparator/: SKILL.md  run.py
skills/experiment-result-comparator/docs/: ablation-tables.md
skills/paper-structural-extractor/: SKILL.md  run.py
skills/reproducibility-checker/: SKILL.md  run.py
skills/reproducibility-checker/docs/: checks-reference.md
skills/research-gap-identifier/: SKILL.md  merge_papers.py  run.py
skills/statistical-test-advisor/: SKILL.md  run.py
skills/statistical-test-advisor/docs/: normality-testing.md
tests/: test_core.py
tests/skills/: test_bibtex_fixer.py  test_experiment_comparator.py  test_paper_extractor.py  test_reproducibility_checker.py  test_statistical_advisor.py
