[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciskills"
version = "0.1.0"
description = "AI Agent Skills for Academic Research — structured paper extraction, BibTeX fixing, experiment comparison, statistical testing, research gap identification, and reproducibility checking."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "SciSkills Contributors" },
]
keywords = [
    "research", "academic", "nlp", "agent", "skills",
    "paper-extraction", "bibtex", "reproducibility", "statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
bibtex = ["bibtexparser>=1.4,<2.0"]
stats = ["scipy>=1.12", "pingouin>=0.5"]
langchain = ["langchain>=0.2", "pydantic>=2.0"]
anthropic = ["anthropic>=0.30"]
all = [
    "pymupdf>=1.24",
    "bibtexparser>=1.4,<2.0",
    "scipy>=1.12",
    "pingouin>=0.5",
    "langchain>=0.2",
    "pydantic>=2.0",
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "scipy>=1.12",
    "numpy>=1.26",
]

[project.scripts]
sciskills = "sciskills.cli:main"

[project.urls]
Homepage = "https://github.com/TPS-qxx/Sciskill"
Documentation = "https://github.com/TPS-qxx/Sciskill#readme"
Repository = "https://github.com/TPS-qxx/Sciskill"
Issues = "https://github.com/TPS-qxx/Sciskill/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sciskills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
